package edu.hitsz.prop;

import edu.hitsz.basic.AbstractFlyingObject;

/**
 * 道具产品接口
 * @author hitsz
 */
public interface PropProduct {
    void effect(Object aircraft);
}