package edu.hitsz.shoot;

import edu.hitsz.aircraft.AbstractAircraft;
import edu.hitsz.bullet.BaseBullet;
import java.util.List;

/**
 * 射击策略接口
 * @author hitsz
 */
public interface ShootStrategy {
    /**
     * 执行射击策略
     * @param aircraft 执行射击的飞机
     * @return 产生的子弹列表
     */
    List<BaseBullet> shoot(AbstractAircraft aircraft);
}
