@startuml
'https://plantuml.com/class-diagram

'=================== 飞行物体基类 ===================
abstract class AbstractFlyingObject {
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + getLocationX():int
    + getLocationY():int
    + setLocation(double locationX, double locationY):void
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}

'=================== 飞机基类（策略模式-Context） ===================
abstract class AbstractAircraft {
    # maxHp:int
    # hp:int
    # shootNum:int
    # power:int
    # direction:int
    - shootStrategy:ShootStrategy

    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + setShootStrategy(ShootStrategy shootStrategy):void
    + shoot():List<BaseBullet>
}

'=================== 敌机基类（工厂方法模式-产品） ===================
abstract class AbstractEnemy {
    + AbstractEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
}

'=================== 子弹基类 ===================
abstract class BaseBullet {
    - power:int

    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
    + getPower():int
}

'=================== 道具产品接口（简单工厂模式） ===================
interface PropProduct {
    + effect(Object aircraft):void
}

'=================== 道具抽象类 ===================
abstract class AbstractProp {
    + AbstractProp(int locationX, int locationY, int speedX, int speedY)
    + {abstract} effect(Object aircraft):void
}

'=================== 道具具体类 ===================
class BloodProp {
    + BloodProp(int locationX, int locationY, int speedX, int speedY)
    + effect(Object aircraft):void
}

class BombProp {
    + BombProp(int locationX, int locationY, int speedX, int speedY)
    + effect(Object aircraft):void
}

class BulletProp {
    + BulletProp(int locationX, int locationY, int speedX, int speedY)
    + effect(Object aircraft):void
}

class BulletPlusProp {
    + BulletPlusProp(int locationX, int locationY, int speedX, int speedY)
    + effect(Object aircraft):void
}

class FreezeProp {
    + FreezeProp(int locationX, int locationY, int speedX, int speedY)
    + effect(Object aircraft):void
}

'=================== 英雄机（单例模式） ===================
class HeroAircraft {
    - {static} heroAircraft:HeroAircraft

    + HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + {static} getHeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp):HeroAircraft
    + forward():void
}

HeroAircraft <|.. HeroAircraft

'=================== 敌机具体类（工厂方法模式-具体产品） ===================
class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
}

class EliteEnemy {
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
}

class EliteProEnemy {
    + EliteProEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
}

class ElitePlusEnemy {
    + ElitePlusEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
}

class BossEnemy {
    + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
}

'=================== 子弹具体类 ===================
class HeroBullet {
    + HeroBullet(int locationX, int locationY, int speedX, int speedY, int power)
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY, int speedX, int speedY, int power)
}

'=================== 策略模式：弹道策略 ===================
interface ShootStrategy {
    + shoot(AbstractAircraft aircraft):List<BaseBullet>
}

class DirectShootStrategy {
    + shoot(AbstractAircraft aircraft):List<BaseBullet>
}

class ScatterShootStrategy {
    + shoot(AbstractAircraft aircraft):List<BaseBullet>
}

class RingShootStrategy {
    + shoot(AbstractAircraft aircraft):List<BaseBullet>
}

class NoShootStrategy {
    + shoot(AbstractAircraft aircraft):List<BaseBullet>
}

'=================== 道具工厂（简单工厂模式） ===================
class PropFactory {
    + {static} getProp(String propName, int locationX, int locationY, int speedX, int speedY):AbstractProp
}

PropProduct <|.. AbstractProp
AbstractProp <|-- BloodProp
AbstractProp <|-- BombProp
AbstractProp <|-- BulletProp
AbstractProp <|-- BulletPlusProp
AbstractProp <|-- FreezeProp

PropFactory ..> BloodProp : creates
PropFactory ..> BombProp : creates
PropFactory ..> BulletProp : creates
PropFactory ..> BulletPlusProp : creates
PropFactory ..> FreezeProp : creates

'=================== 敌机工厂（工厂方法模式） ===================
interface EnemyFactory {
    + createEnemy(int locationX, int locationY, int speedX, int speedY, int hp):AbstractEnemy
}

class MobEnemyFactory {
    + createEnemy(int locationX, int locationY, int speedX, int speedY, int hp):AbstractEnemy
}

class EliteEnemyFactory {
    + createEnemy(int locationX, int locationY, int speedX, int speedY, int hp):AbstractEnemy
}

class EliteProEnemyFactory {
    + createEnemy(int locationX, int locationY, int speedX, int speedY, int hp):AbstractEnemy
}

class ElitePlusEnemyFactory {
    + createEnemy(int locationX, int locationY, int speedX, int speedY, int hp):AbstractEnemy
}

class BossEnemyFactory {
    + createEnemy(int locationX, int locationY, int speedX, int speedY, int hp):AbstractEnemy
}

EnemyFactory <|.. MobEnemyFactory
EnemyFactory <|.. EliteEnemyFactory
EnemyFactory <|.. EliteProEnemyFactory
EnemyFactory <|.. ElitePlusEnemyFactory
EnemyFactory <|.. BossEnemyFactory

MobEnemyFactory ..> MobEnemy : creates
EliteEnemyFactory ..> EliteEnemy : creates
EliteProEnemyFactory ..> EliteProEnemy : creates
ElitePlusEnemyFactory ..> ElitePlusEnemy : creates
BossEnemyFactory ..> BossEnemy : creates

'=================== 策略模式实现关系 ===================
ShootStrategy <|.. DirectShootStrategy
ShootStrategy <|.. ScatterShootStrategy
ShootStrategy <|.. RingShootStrategy
ShootStrategy <|.. NoShootStrategy

'=================== 继承关系 ===================
AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet
AbstractFlyingObject <|-- AbstractProp
AbstractAircraft <|-- HeroAircraft
AbstractAircraft <|-- AbstractEnemy

AbstractEnemy <|-- MobEnemy
AbstractEnemy <|-- EliteEnemy
AbstractEnemy <|-- EliteProEnemy
AbstractEnemy <|-- ElitePlusEnemy
AbstractEnemy <|-- BossEnemy

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

'=================== 策略模式关联关系 ===================
AbstractAircraft o--> ShootStrategy

'=================== 各飞机/道具与具体策略的使用关系 ===================
HeroAircraft ..> DirectShootStrategy : default uses
MobEnemy ..> NoShootStrategy : uses
EliteEnemy ..> DirectShootStrategy : uses
EliteProEnemy ..> DirectShootStrategy : uses
ElitePlusEnemy ..> ScatterShootStrategy : uses
BossEnemy ..> RingShootStrategy : uses
BulletProp ..> ScatterShootStrategy : switches to
BulletPlusProp ..> RingShootStrategy : switches to

@enduml
